Add delete and update commands
