# api/openapi/categories.yaml
@@ -127,6 +127,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+    delete:
+      summary: Deletes a category by ID
+      description: Deletes a single category based on the ID.
+      operationId: deleteCategory
+      parameters:
+        - name: id
+          in: path
+          description: ID of category to delete
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '204':
+          description: Category deleted
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   securitySchemes:
     bearerAuth:
